Fix horizontal scroll on Safari (iOS).

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -17,6 +17,10 @@ $container-max-width: 800px !default;
 /**
  * Global
  */
+html {
+    overflow-x: hidden;
+}
+
 body {
     background-color: $background-color;
     margin: 0 auto;
